<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/lyout"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/txt" />

            <EditText
                android:id="@+id/txtTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hinttxto"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/txtclave" />

            <EditText
                android:id="@+id/txtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/thintclave"
                android:layout_marginTop="15dp"
                android:inputType="text"
                android:singleLine="true"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/rdgGrupo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_btngroup"
                android:orientation="horizontal" >


                    <RadioButton
                        android:id="@+id/rbCesar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:text="@string/spcesar" />

                    <RadioButton
                        android:id="@+id/rbplayfair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:text="@string/spplayfair" />

                    <RadioButton
                        android:id="@+id/rbVigenere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#FFF"
                        android:text="@string/spvigenere" />

                    <RadioButton
                        android:id="@+id/rbVernam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spvernam"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="#FFF"
                        android:textStyle="bold"
                        android:textSize="12sp" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDescifrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnCifrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/lyout"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/btnCifrar"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDescifrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/btnCifrar"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/btnDescifrar"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSubneteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDescifrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/txtresul"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>